# mcp-multi-weather

./: .dockerignore  .dxtignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  manifest.template.json  pyproject.toml
.github/: RELEASE.md  copilot-instructions.md
.github/workflows/: ci.yml
src/mcp_weather/: __main__.py  main.py  mcp.py  utils.py
src/mcp_weather/cli/: dxt_manifest.py  server.py
src/mcp_weather/components/: weather.py
src/mcp_weather/providers/: openweather.py  types.py
tests/: conftest.py  mocks.py  test_main.py  test_openweather.py
