[project]
name = 'mcp-weather'

authors         = [{ name = 'Jose Galarza', email = 'igalarzab@gmail.com' }]
description     = 'MCP server for checking the weather history and forecast'
readme          = 'README.md'
requires-python = '>=3.10'
version         = '0.1.0'

dependencies = [
    'aiohttp[speedups]>=3.12.14',
    'fastmcp>=2.10.5',
]

[dependency-groups]
dev = [
    'pytest-asyncio>=1.1.0',
    'pytest>=8.4.1',
    'ruff>=0.12.3',
]

[project.scripts]
mcp-weather = 'mcp_weather.__main__:main'

[build-system]
build-backend = 'uv_build'
requires      = ['uv_build']

[tool.pyright]
reportAny                      = 'none'
reportIgnoreCommentWithoutRule = 'none'
reportUnknownLambdaType        = 'none'
reportUnusedCallResult         = 'none'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
