[project]
name = "mcp-weather"

authors         = [{ name = "Jose Galarza", email = "igalarzab@gmail.com" }]
description     = "MCP server for checking the weather history and forecast"
readme          = "README.md"
requires-python = ">=3.12"
version         = "0.1.0"

dependencies = [
  "aiohttp[speedups]>=3.12.14",
  "fastmcp>=2.10.6",
]

[dependency-groups]
dev = [
  "aioresponses>=0.7.6",
  "pyright>=1.1.403",
  "pytest-asyncio>=1.1.0",
  "pytest>=8.4.1",
  "ruff>=0.12.4",
]

[project.scripts]
mcp-weather = "mcp_weather.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.pyright]
reportAny                      = "none"
reportIgnoreCommentWithoutRule = "none"
reportMissingTypeStubs         = "none"
reportUnknownLambdaType        = "none"
reportUnusedCallResult         = "none"
typeCheckingMode               = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
